--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="css/style.css">	
+
 <head>
 	<title>Portfolio</title>
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <!-- Nav Bar -->
 <div id="nav-bar">
 	<nav>
 	<span><ol>
 			<a href="#about"><li>About Me</li></a>
-			<a href="#projects"><li>Project</li></a>
+			<a href="#first"><li>Project</li></a>
 			<a href="#contact"><li>Contact</li></a>
 		</ol>
 	</span>
@@ -29,10 +31,47 @@
     </div>
   </div>
 <section class="section" id="about">
-    <h2>About the Web Designer</h2>
+	<div class="pimg4"></div>
+    <h2>About the Web Designer:</h2>
     <p>
-       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, rem error debitis odio ab quo deserunt recusandae eveniet iure hic repudiandae voluptas assumenda aliquam eligendi dolorum animi similique consequuntur adipisci ipsa corrupti laborum reiciendis magnam veritatis a temporibus maxime nihil obcaecati unde architecto! Vero, ex voluptatem et voluptatum quos dolores rem reiciendis nisi facilis ipsum distinctio a. Quos, vitae animi!
+       Hola!  My name is CJ Pizana.  I'm a front end web developer based in LA.  Some of my passions include art, design, math, and programming.  When I develop websites, I focus on combining an elegant user interface with intuitive functionality to deliver a user experience that's quick, simple, and pain free.
     </p>
+</section>
+<section class="section" id="skills">
+  <h2>Technical Skills</h2>
+  <div class="container-1">
+	<div class="col">
+	<i class="fa fa-television fa-3x" aria-hidden="true"></i>
+
+		<h3>Web Development</h2>
+		<ul>
+			<li id="ts">HTML</li>
+			<li id="ts"CSS</li>
+			<li id="ts">JavaScript</li>
+		</ul>
+	</div>
+	<div class="col">
+	<i class="fa fa-language fa-3x" aria-hidden="true"></i>
+
+		<h3>Front-End Libraries</h2>
+		<ul>
+			<li id="ts">Bootstrap</li>
+			<li id="ts">jQuery</li>
+			<li id="ts">Sass</li>
+			<li id="ts">React</li>
+			<li id="ts">Redux</li>
+		</ul>
+	</div>	
+	<div class="col">
+	<i class="fa fa-archive fa-3x" aria-hidden="true"></i>
+
+		<h3>Other</h2>
+		<ul>
+			<li id="ts">Git</li>
+			<li id="ts">Photoshop</li>
+		</ul>
+	</div>	
+  </div>
 </section>
 <!-- Projects -->
 <div class="container">
@@ -44,11 +83,11 @@
 		</div>
 	</div>
 </div>
-<div class="container-a">
+<div class="container-a"id="first">
 	<div class="box1" id="projects">
 		<a href="" id="project-tile">
 			<div class="pimg3">
-			<span class="border">Project Title</span>
+			<span class="border" >Project Title</span>
 			</div>
 		</a>
 	</div>
