--- a/index.html
+++ b/index.html
@@ -26,17 +26,20 @@
   <div class="pimg1">
     <div class="ptext">
       <span class="border">
-        ________<br> Web Designer
+        <h1>Carol Pizana</h1><br> Web Designer
       </span>
     </div>
   </div>
-<section class="section" id="about">
+<!-- About -->
+<section class="section">
 	<div class="pimg4"></div>
+	<div id="about">
     <h2>About the Web Designer:</h2>
     <p>
        Hola!  My name is CJ Pizana.  I'm a front end web developer based in LA.  Some of my passions include art, design, math, and programming.  When I develop websites, I focus on combining an elegant user interface with intuitive functionality to deliver a user experience that's quick, simple, and pain free.
-    </p>
+    </p></div>
 </section>
+<!-- Technical Skills-->
 <section class="section" id="skills">
   <h2>Technical Skills</h2>
   <div class="container-1">
@@ -46,7 +49,7 @@
 		<h3>Web Development</h2>
 		<ul>
 			<li id="ts">HTML</li>
-			<li id="ts"CSS</li>
+			<li id="ts">CSS</li>
 			<li id="ts">JavaScript</li>
 		</ul>
 	</div>
@@ -67,8 +70,8 @@
 
 		<h3>Other</h2>
 		<ul>
-			<li id="ts">Git</li>
-			<li id="ts">Photoshop</li>
+			<li id="ts1">Git</li>
+			<li id="ts1">Photoshop</li>
 		</ul>
 	</div>	
   </div>
@@ -140,16 +143,9 @@
 			</div>
 		</a>
 	</div>
-	<div class="box9" id="projects">
-		<a href="" id="project-tile">
-			<div class="pimg3">
-			<span class="border">Project Title</span>
-			</div>
-		</a>
-	</div>
-	</div>
 </div>
 </body>
+<!-- Footer -->
 <footer id="contact">
 	<div class="box">
 		<h2 class="content-title">Contact Me</h2>
