--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 <div id="nav-bar">
 	<nav>
 	<span><ol>
-			<a href="#about"><li>About Me</li></a>
-			<a href="#first"><li>Project</li></a>
-			<a href="#contact"><li>Contact</li></a>
+			<a href="#about"><dd>About Me</dd></a>
+			<a href="#skills"><dd>Skills</dd></a>
+			<a href="#first"><dd>Project</dd></a>
+			<a href="#contact"><dd>Contact</dd></a>
 		</ol>
 	</span>
 	</nav>
@@ -31,13 +32,14 @@
     </div>
   </div>
 <!-- About -->
-<section class="section">
+<section class="section" id="about">
 	<div class="pimg4"></div>
-	<div id="about">
-    <h2>About the Web Designer:</h2>
-    <p>
-       Hola!  My name is CJ Pizana.  I'm a front end web developer based in LA.  Some of my passions include art, design, math, and programming.  When I develop websites, I focus on combining an elegant user interface with intuitive functionality to deliver a user experience that's quick, simple, and pain free.
-    </p></div>
+	<div class="section" id="web">
+		<h2>About the Web Designer:</h2>
+		<p>
+		   Hola!  My name is CJ Pizana.  I'm a front end web developer based in LA.  Some of my passions include art, design, math, and programming.  When I develop websites, I focus on combining an elegant user interface with intuitive functionality to deliver a user experience that's quick, simple, and pain free.
+		</p>
+	</div>
 </section>
 <!-- Technical Skills-->
 <section class="section" id="skills">
