--- a/index.html
+++ b/index.html
@@ -45,35 +45,35 @@
 <section class="section" id="skills">
   <h2>Technical Skills</h2>
   <div class="container-1">
-	<div class="col">
+	<div class="col1">
 	<i class="fa fa-television fa-3x" aria-hidden="true"></i>
 
 		<h3>Web Development</h2>
 		<ul>
-			<li id="ts">HTML</li>
-			<li id="ts">CSS</li>
-			<li id="ts">JavaScript</li>
+			<li>HTML</li>
+			<li>CSS</li>
+			<li>JavaScript</li>
 		</ul>
 	</div>
-	<div class="col">
+	<div class="col2">
 	<i class="fa fa-language fa-3x" aria-hidden="true"></i>
 
 		<h3>Front-End Libraries</h2>
 		<ul>
-			<li id="ts">Bootstrap</li>
-			<li id="ts">jQuery</li>
-			<li id="ts">Sass</li>
-			<li id="ts">React</li>
-			<li id="ts">Redux</li>
+			<li>Bootstrap</li>
+			<li>jQuery</li>
+			<li>Sass</li>
+			<li>React</li>
+			<li>Redux</li>
 		</ul>
 	</div>	
-	<div class="col">
+	<div class="col3">
 	<i class="fa fa-archive fa-3x" aria-hidden="true"></i>
 
 		<h3>Other</h2>
 		<ul>
-			<li id="ts1">Git</li>
-			<li id="ts1">Photoshop</li>
+			<li>Git</li>
+			<li>Photoshop</li>
 		</ul>
 	</div>	
   </div>
